- Fixed a bug with $scrapeserver that would cause the bot to freeze. This method is much more efficient, closes #27
- Created $scrapedatabase -- creates accounts for every member in every server that has less than 3500 members.
- Fixed a bug with the updated messages logger that caused embedded links to trigger the message updated log event.
- Added help command for $sttreflog

Version 1.6.0 Stable

- Kaguya got approved on Discordbots.org!! Give her an upvote here: https://discordbots.org/bot/538910393918160916
- $groll now takes points away on use, then gives them back + multiplier if the roll was won.
- $timelyreset now actually builds the embed. Same thing with $ctr
- Leveling embed is now more compact, takes up less space in chat.
- Added in ReliabilityService...if bot disconnects from websocket, it (should) reconnect on its own after 30 seconds.
- All log messages are now saved to a file (incase the bot crashes).
- Removed some unnecessary packages
- Timer added to restart application every 6 hours (to avoid disconnect issues).
- Added .gitignore.
- Changed Message cache from 1000 to 250 (to hopefully help wtih crashes)
- "viewfilter" is now an alias for "filterview"
- "$createrole" and "$deleterole" no longer require quotation marks when creating a role that has a space in the name. (Ex: Smelly Sushi)
- **Fixed a major bug with the word filter. If a message contains a filtered phrase, it will now be deleted properly. Resolves #23!**
- Took out the ability for the bot to log messages to it's own file (commandmessagelogs.txt). This will likely eliminate (potential) crashes.
    Kaguya would throw an unhandled exception if high rates of use were achieved.
- Fixed a bug with "$deleterole" where if multiple roles of the same name were found, the bot would not do anything.
    Now, Kaguya will delete all roles with the matched name.
- Updated "$DeleteTextChannel" and "$DeleteVoiceChannel" commands to properly delete the channels.